[tool.poetry]
name = "aphorism"
version = "0.0.0"
description = "Simple microblog for voice messages"
authors = ["Matthew Nekirov <matthew.nekirov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
alembic = "^1.7.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
