[tool.poetry]
name = "aphorism"
version = "0.0.0"
description = "Simple microblog for voice messages"
authors = ["Matthew Nekirov <matthew.nekirov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
alembic = "^1.7.6"
gunicorn = "^20.1.0"
Flask-SQLAlchemy = "^2.5.1"
click = "^8.0.4"
psycopg2 = "^2.9.3"
Flask-Migrate = "^3.1.0"
flask-restx = "^0.5.1"
Flask-JWT-Extended = "^4.3.1"
regex = "^2022.4.24"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mypy = "^0.931"
isort = "^5.10.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.32"}
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
